# modelkit

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-optional.txt  requirements.in  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  lint.yml  main.yml  tests.yml
assets/assets_dir/: index.html
assets/environment/: index.html
assets/managing_assets/: index.html
assets/remote_assets/: index.html
assets/retrieving_assets/: index.html
assets/storage_provider/: index.html
assets/store_organization/: index.html
assets/versioning/: index.html
cli/: index.html
configuration/: index.html
contributions/release/: index.html
deployment/deployment/: index.html
deployment/integrate_fastapi/: index.html
docs/: cli.md  configuration.md  index.md  logging.md  migration.md
docs/assets/: assets.md  assets_dir.md  assets_push.md  environment.md  index.md  managing_assets.md  remote_assets.md  retrieving_assets.md  storage_provider.md  store_organization.md  versioning.md  working_dir.md
docs/contributions/: release.md
docs/deployment/: deployment.md  integrate_fastapi.md
docs/examples/: tf_hub.md
docs/examples/nlp_sentiment/: advanced_models.md  classifier.md  intro.md  tldr.md  tokenizer.md  vectorizer.md  wiring_things_up.md
examples/nlp_sentiment/advanced_models/: index.html
examples/nlp_sentiment/classifier/: index.html
examples/nlp_sentiment/intro/: index.html
examples/nlp_sentiment/tldr/: index.html
examples/nlp_sentiment/tokenizer/: index.html
examples/nlp_sentiment/vectorizer/: index.html
examples/tf_hub/: index.html
migration/: index.html
modelkit/: __init__.py  api.py  cli.py  log.py
modelkit/assets/: __init__.py  cli.py  errors.py  log.py  manager.py  remote.py  settings.py  utils.py  versioning.py
modelkit/assets/drivers/: __init__.py  abc.py  azure.py  gcs.py  local.py  retry.py  s3.py
modelkit/assets/versioning/: major_minor.py  simple_date.py  versioning.py
modelkit/core/: __init__.py  errors.py  fixtures.py  library.py  model.py  model_configuration.py  service.py  settings.py  testing.py  types.py
modelkit/core/models/: distant_model.py  tensorflow_model.py
modelkit/core/profilers/: base.py  simple.py
modelkit/logging/: __init__.py  renderer.py
modelkit/testing/: __init__.py  fixtures.py  reference.py  tf_serving.py
modelkit/utils/: __init__.py  cache.py  logging.py  memory.py  pretty.py  pydantic.py  redis.py  serialization.py  tensorflow.py  testing.py  traceback.py
scripts/: ci_tests.sh  lint-apply.sh  lint.sh  test.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_api.py  test_async.py  test_auto_testing.py  test_batching.py  test_caching.py  test_core.py  test_describe.py  test_distant_http_model.py  test_errors.py  test_logging.py  test_model_serialization.py  test_module_configure.py  test_predict_override.py  test_serialization.py  test_settings.py  test_simple_profiler.py  test_testing.py  test_tf_model.py  test_tf_serving_deploy.py  test_typing.py  test_validate.py
tests/assets/: conftest.py  test_asset_specification.py  test_assetsmanager.py  test_assetsmanager_subpart.py  test_assetsmanager_versioning.py  test_driver_errors.py  test_drivers.py  test_local_driver.py  test_local_manager.py  test_lock.py  test_retry.py  test_settings.py  test_versioning.py
tests/assets/resources/: download_asset.py  lock.py
tests/assets/test_versioning/: test_major_minor_versioning.py  test_simple_date_version.py  test_versioning.py
tests/assets/testdata/: some_data.json
tests/assets/testdata/some_data_folder/: some_data_in_folder.json  some_data_in_folder_2.json
tests/testdata/: library_describe.txt  mocked_service.py  test.config  test_describe_load_info.txt  write_config.config
tests/testdata/api/: openapi.json
tests/testdata/dummy_tf_model/0.0/1/: saved_model.pb
tests/testdata/dummy_tf_model/0.0/1/variables/: variables.data-00000-of-00001  variables.index
tests/testdata/test-bucket/assets-prefix/category/: asset.versions  override-asset.versions  simple_date_asset.versions
tests/testdata/test-bucket/assets-prefix/category/asset/: 0.0  0.1  1.0
tests/testdata/test-bucket/assets-prefix/category/simple_date_asset/: 2021-11-14T18-00-00Z  2021-11-15T17-31-06Z
tests/testdata/test-bucket/override-assets-prefix/category/: override-asset.versions
tests/testdata/test-bucket/override-assets-prefix/category/override-asset/: 0.0  1.0
tests/testdata/test_module/: module_a.py  module_b.py
tests/testdata/tf_configs/: local-docker.config  remote.config
tests/testdata/typing/: library_get_model_ko.py  library_get_model_ok.py  model_dependencies_ko_items.py  model_dependencies_ok.py  predict_bad.py  predict_list.py  predict_ok.py  predict_pydantic_bad.py  predict_pydantic_ok.py
tests/testmodels/: some_assets.py  some_models.py
