[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py37']

[tool.towncrier]
package = "modelkit"
filename = "HISTORY.md"
directory = "newsfragments"
underlines = ["", "", ""]
title_format = "# {version} ({project_date})"
start_string = "<!-- towncrier release notes start -->"
template = "towncrier-template.md"

# Hack towncrier to output md using a single type named "md" because we don't
# want categories but we want a .md extension. The section/type won't be
# displayed, as configured in towncrier-template.md.
[[tool.towncrier.type]]
directory = "md"
name = ""
showcontent = true
