[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelkit"
description = "Minimalistic MLOps library for python"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "aiohttp",
    "asgiref",
    "cachetools",
    "click",
    "filelock",
    "humanize",
    "pydantic<2.0",
    "python-dateutil",
    "redis",
    "requests",
    "rich",
    "sniffio",
    "structlog",
    "tenacity",
    "typing_extensions",
    "tabulate",
]
[tool.setuptools.dynamic]
version = {attr = "modelkit.__version__"}

[project.urls]
Homepage = "https://github.com/Cornerstone-OnDemand/modelkit"
"Bug Tracker" = "https://github.com/Cornerstone-OnDemand/modelkit/issues"
Documentation = "https://Cornerstone-OnDemand.github.io/modelkit/"
"Source Code" = "https://github.com/Cornerstone-OnDemand/modelkit"


[project.optional-dependencies]
tensorflow = [
    "numpy",
    "grpcio",
    "tensorflow",
    "tensorflow-serving-api",
]
cli = [
    "networkx",
    "memory-profiler",
    "fastapi",
    "uvicorn",
]
api = [
    "fastapi",
    "uvicorn",
]
assets-s3 = ["boto3"]
assets-gcs = ["google-cloud-storage"]
assets-az = ["azure-storage-blob"]

[project.scripts]
modelkit = "modelkit.cli:modelkit_cli"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["modelkit*"]
exclude = ["tests*", "docs*", "bin*", "scripts*"]
namespaces = false

[tool.setuptools.package-data]
modelkit = ["py.typed"]

[tool.pytest.ini_options]
addopts = """
--strict
--verbose
--tb=native
-vv
--failed-first
--disable-warnings
--durations 10
--color=yes
tests"""

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = "88"
extend-ignore = "E203"

[tool.coverage.run]
source = ["modelkit"]
omit = [
    "modelkit/assets/cli.py",
    "modelkit/cli.py",
]

[tool.coverage.report]
fail_under = 90
precision = 2

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["azure.storage.blob.*"]
ignore_errors = true

[tool.bumpversion]
commit = true
tag = true
tag_name = "{new_version}"
allow_dirty = true
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "modelkit/__init__.py"
