[bumpversion]
current_version = 0.0.12
commit = True
tag = True

[metadata]
name = modelkit
description = Machine learning lib.
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	aiohttp
	asgiref
	boto3
	cachetools
	click
	filelock
	google-cloud-storage
	humanize
	numpy~=1.19.3
	pydantic
	python-dateutil
	redis
	rich
	six==1.15.0
	sniffio
	structlog
	tenacity
	typing_extensions==3.7.4.3; python_version<"3.8"

[options.extras_require]
tensorflow = 
	tensorflow
	grpcio
	tensorflow
	tensorflow-serving-api
cli = 
	networkx
	memory-profiler
	fastapi
	uvicorn

api =
	fastapi
	uvicorn

[options.packages.find]
where = .
exclude = 
	tests

[options.package_data]
modelkit = py.typed

[tool:pytest]
addopts = 
	--strict
	--verbose
	--tb=native
	-vv
	--failed-first
	--disable-warnings
	--durations 10
	--color=yes
	tests

[tool:isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E741,W605,B011,E203
exclude = build,lib

[coverage:run]
source = modelkit
omit = 
	modelkit/assets/cli.py
	modelkit/cli.py

[coverage:report]
fail_under = 90
precision = 2

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy

[options.entry_points]
console_scripts = 
	modelkit = modelkit.cli:modelkit_cli

[bumpversion:file:modelkit/__init__.py]

[bumpversion:file:setup.py]
