[bumpversion]
current_version = 0.0.24
commit = True
tag = True

[metadata]
name = modelkit
description = Machine learning lib.
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
home-page = https://idpy.org
project_urls = 
	Bug Tracker = https://github.com/Cornerstone-OnDemand/modelkit/issues
	Documentation = https://Cornerstone-OnDemand.github.io/modelkit/
	Source Code = https://github.com/Cornerstone-OnDemand/modelkit

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	aiohttp
	asgiref
	cachetools
	click
	filelock
	humanize
	pydantic
	python-dateutil
	redis
	requests
	rich
	sniffio
	structlog
	tenacity
	typing_extensions
	tabulate

[options.extras_require]
tensorflow = 
	grpcio
	tensorflow
	tensorflow-serving-api
cli = 
	networkx
	memory-profiler
	fastapi
	uvicorn
api = 
	fastapi
	uvicorn
assets-s3 = 
	boto3
assets-gcs = 
	google-cloud-storage
assets-az = 
	azure-storage-blob

[options.packages.find]
where = .
exclude = 
	tests

[options.package_data]
modelkit = py.typed

[tool:pytest]
addopts = 
	--strict
	--verbose
	--tb=native
	-vv
	--failed-first
	--disable-warnings
	--durations 10
	--color=yes
	tests

[tool:isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203

[coverage:run]
source = modelkit
omit = 
	modelkit/assets/cli.py
	modelkit/cli.py

[coverage:report]
fail_under = 90
precision = 2

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy

[mypy-azure.storage.blob.*]
ignore_errors = True

[options.entry_points]
console_scripts = 
	modelkit = modelkit.cli:modelkit_cli

[bumpversion:file:modelkit/__init__.py]

[bumpversion:file:setup.py]
